# KingOfNewYork

./: CMakeLists.txt  README.md
King of New York/Drivers/: Assignment2.cpp  Assignment4Driver.cpp  CardsPiecesDriver.cpp  DiceDriver.cpp  GameDriver.cpp  MapDriver.cpp  PlayerDiver.cpp  PlayerDriver.cpp
King of New York/King of New York/: BadMap.txt  BoardFigures.cpp  BoardFigures.h  BuildingUnitTiles.cpp  BuildingUnitTiles.h  Cards.cpp  Cards.h  DeckOfBuildinigUnitTiles.cpp  DeckOfBuildinigUnitTiles.h  DeckOfCards.cpp  DeckOfCards.h  Dice.cpp  Dice.h  DiceDriver.cpp  Game.cpp  Game.h  GamePieces.cpp  GamePieces.h  GameTokens.cpp  GameTokens.h  GeneralCards.cpp  GeneralCards.h  GoodMap.map  GoodMap.txt  KingOfNewYork.cpp  Map.cpp  Map.h  Map.hpp  MapLoader.cpp  MapLoader.h  MonsterCards.cpp  MonsterCards.h  Player.cpp  Player.h  Region.cpp  Region.h  Region.hpp  Zone.cpp  Zone.h  Zone.hpp  (+5 more)
King of New York/King of New York.xcodeproj/: project.pbxproj
King of New York/King of New York.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
King of New York/King of New York.xcodeproj/project.xcworkspace/xcuserdata/shayan.xcuserdatad/: UserInterfaceState.xcuserstate
King of New York/King of New York.xcodeproj/xcuserdata/shayan.xcuserdatad/xcschemes/: xcschememanagement.plist
King of New York/King of New York/Graph/: Graph.h  GraphVertex.h  SinglyLinkedList.h  SinglyLinkedListNode.h  StringFunctions.h
King of New York/King of New York/Maps/: map.map
King of New York/King of New York/Observer/: CardEffectsObserver.cpp  CardEffectsObserver.h  DiceEffectsObserver.cpp  DiceEffectsObserver.h  GameStatisticsObserver.cpp  GameStatisticsObserver.h  Observer.cpp  Observer.h  PhaseObserver.cpp  PhaseObserver.h  Subject.cpp  Subject.h
King of New York/King of New York/Strategy/: AggressivePlayerStrategy.cpp  AggressivePlayerStrategy.h  HumanPlayerStrategy.cpp  HumanPlayerStrategy.h  ModeratePlayerStrategy.cpp  ModeratePlayerStrategy.h  Strategy.h
